--- a/Template/main.css
+++ b/Template/main.css
@@ -1124,3 +1124,16 @@ text-align:center;
 
 
 }
+#Butik{
+    position:absolute;
+    bottom:0;
+    text-align: center;
+    width:100%;
+
+    
+}
+.shoppic{
+    
+    margin-top:20%;
+    
+}
