--- a/Template/shops.html
+++ b/Template/shops.html
@@ -209,102 +209,96 @@
 </div>
            
     
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/80APZS6SUS_89384197_front.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-        </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/82APFSMOHW_7310647180960_front.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-        </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/08APLS9SNS_89383827_front.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-        </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/83APKSWCL2_3114439055429_back.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-        </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/017922-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-        </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/01APPOI6T7_5415212479394_711-Skinny-Jeans-Fair-Spirit_detail.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-        </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/227256-0426.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-        </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/42APO8EX4S_5415313111469_front.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-        </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-        </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/60AP382AOY_7340110928683_side.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-        </div>
          <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/018998-0001.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
         </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = ""></div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
         </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = ""></div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
         </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = ""></div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
         </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = ""></div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
         </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = ""></div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
         </div>
-        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
         </div>
-       <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-    </div> 
-
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
+      <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
+           <img class ="shoppic" src="http://www.koholo.com/admin/users/folders_for_webbshop/(smink)Untitled-2.png" title="Visa intern butik" width="178" height="65.9827586207" border="0">
+            <div id = "Butik">Butik-butiken</div>
+            
+        </div>
 </div>
         </div>
     
