--- a/Template/products.html
+++ b/Template/products.html
@@ -138,26 +138,21 @@
                         
                             <select class="minidrops">
                               <option>Ägare</option>
-                              <option>Option 1</option>
-                              <option>Option 2</option>
-                              <option>Option 3</option>
-                              <option>Option 4</option>
+                              <option>Privatperson</option>
+                              <option>Företag</option>
+                             
                             </select>
                                                     
                             <select class="minidrops">
                               <option>Butiker</option>
-                              <option>Option 1</option>
-                              <option>Option 2</option>
-                              <option>Option 3</option>
-                              <option>Option 4</option>
+                              <option>Fysiska butiker</option>
+                              <option>Onlinebutik</option>
+                          
                             </select>
                                                     
                             <select class="minidrops">
-                              <option>Länder</option>
-                              <option>Option 1</option>
-                              <option>Option 2</option>
-                              <option>Option 3</option>
-                              <option>Option 4</option>
+                            <option value="">Länder</option>
+				<option value="Danmark">Danmark  </option><option value="Estland">Estland  </option><option value="Finland">Finland  </option><option value="Frankrike">Frankrike  </option><option value="Holland">Holland  </option><option value="Hong Kong">Hong Kong  </option><option value="Italien">Italien  </option><option value="Jersey">Jersey  </option><option value="Kanada">Kanada  </option><option value="Kina">Kina  </option><option value="Lettland">Lettland  </option><option value="Litauen">Litauen  </option><option value="Norge">Norge  </option><option value="Österrike">Österrike  </option><option value="Polen">Polen  </option><option value="Portugal">Portugal  </option><option value="Slovakien">Slovakien  </option><option value="Spanien">Spanien  </option><option value="Storbritannien">Storbritannien  </option><option value="Sverige">Sverige  </option><option value="Tyskland">Tyskland  </option><option value="USA">USA  </option>
                             </select>
 
 
