--- a/Template/member-edit-shop.html
+++ b/Template/member-edit-shop.html
@@ -52,12 +52,12 @@
     
     <div class="container">
         <div class="row">
-            <h3 class="col-sm-10 memberh3">Hantera butiker och produkter</h3>
-            <p class="col-sm-8">Fyll i fälten nedan för att skapa din butik på Koholo!</p>
+            <h3 class="col-sm-10 memberh3">Redigera butiker och produkter</h3>
+            <p class="col-sm-8">Fyll i fälten nedan för att redigera din butik på Koholo!</p>
             <p class="col-sm-6">OBS! Det du skriver i fälten "Butiksnamn" och "Beskrivning" kommer att bli sökmotoroptimerat vilket gör att din butik och dina produkter har större chans att synas i både vår och i andra sökmotorer.</p>
         </div>
     
-    <h3 class="memberh3">Lägg till din webbshop</h3>
+    <h3 class="memberh3">Redigera din webbshop</h3>
     <form class="form-horizontal" role="form" method="post" action="#">
     <input type="hidden" name="_token" value="#">
             <div class="form-group">
@@ -211,7 +211,7 @@
         
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-10">
-                    <button type="submit" id="CreateStore" class="btn btn-default">Lägg till butik</button>
+                    <button type="submit" id="CreateStore" class="btn btn-default">Uppdatera din butik</button>
                 </div>
             </div>
     
