modal till index.html

--- a/Template/index.html
+++ b/Template/index.html
@@ -142,22 +142,22 @@
   <h3 class="popular">Populära produkter</h3>
       <div class="slider center col-md-10 col-md-offset-1">       
           <div class="slide">
-            <div class="cl cl-yellow"></div>
+            <div data-toggle="modal" data-target="#productModal" class="cl cl-yellow"></div>
           </div>
           <div class="slide">
-            <div class="cl cl-blue"></div>
+            <div data-toggle="modal" data-target="#productModal" class="cl cl-blue"></div>
           </div>
           <div class="slide">
-            <div class="cl cl-red"></div>
+            <div data-toggle="modal" data-target="#productModal" class="cl cl-red"></div>
           </div>
         <div class="slide">
-            <div class="cl cl-yellow"></div>
+            <div data-toggle="modal" data-target="#productModal" class="cl cl-yellow"></div>
           </div>
           <div class="slide">
-            <div class="cl cl-blue"></div>
+            <div data-toggle="modal" data-target="#productModal" class="cl cl-blue"></div>
           </div>
           <div class="slide">
-            <div class="cl cl-red"></div>
+            <div data-toggle="modal" data-target="#productModal" class="cl cl-red"></div>
           </div>
           
       </div>
@@ -192,6 +192,33 @@
           </div>
           
       </div>
+</div>
+        <div id="productModal" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <h3 class="productinfoheader">Jeans & Stuff</h3>
+        <p class="productinfo">Levi's</p>
+        <p>511 Slim Fit Evolution Creek</p>
+        <p class="productinfo">1099 :-</p>
+        
+        <img class="modalimage" src="byssor.jpg">
+          
+        <h4 class="descriptionheader">Beskrivning</h4>
+        <p class="productdescription">Ett par jeans med modern smal passform med utrymme för rörelse, en klassiker från och med nu. Dessa jeans sitter under midjan med en smal passform över höft och lår och smala ben.</p>
+          
+      </div>
+      <div class="modal-footer">
+          <button type="button" class="btn btn-success">Beställ</button>
+      </div>
+    </div>
+
+  </div>
 </div>
         </div>
     <footer class="footer">
