lagt in mer MODDAAAAAALL

--- a/Template/index.html
+++ b/Template/index.html
@@ -214,7 +214,7 @@
           
       </div>
       <div class="modal-footer">
-          <button type="button" class="btn btn-success">Beställ</button>
+          <button type="button" class="btn btn-success"><a href="#" id="modallink">Beställ</a></button>
       </div>
     </div>
 
