--- a/Template/store.html
+++ b/Template/store.html
@@ -81,6 +81,33 @@
 	</div>
     <hr class="col-xs-8 col-xs-offset-2">
     
+        <div id="productModal" class="modal fade" role="dialog">
+  <div class="modal-dialog modal-lg">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+        <h3 class="productinfoheader">Jeans & Stuff</h3>
+        <p class="productinfo">Levi's</p>
+        <p>511 Slim Fit Evolution Creek</p>
+        <p class="productinfo">1099 :-</p>
+        
+        <img class="modalimage" src="byssor.jpg">
+          
+        <h4 class="descriptionheader">Beskrivning</h4>
+        <p class="productdescription">Ett par jeans med modern smal passform med utrymme för rörelse, en klassiker från och med nu. Dessa jeans sitter under midjan med en smal passform över höft och lår och smala ben.</p>
+          
+      </div>
+      <div class="modal-footer">
+          <button type="button" class="btn btn-success"><a href="#" id="modallink">Beställ</a></button>
+      </div>
+    </div>
+
+  </div>
+</div>
     <div class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/80APZS6SUS_89384197_front.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
