--- a/Template/products.html
+++ b/Template/products.html
@@ -252,7 +252,7 @@
 
     
     
-<div id ="ProductWrapper" >
+<div class ="ProductWrapper" >
     
 <div id="productModal" class="modal fade" role="dialog">
   <div class="modal-dialog modal-lg">
