--- a/Template/store.html
+++ b/Template/store.html
@@ -204,7 +204,7 @@
             <div id = "ProductPrice">299:-</div>
         </div>
     </div>
-   <footer class="footer">
+   <footer id="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
         
         <div class="container">
