--- a/Template/store.html
+++ b/Template/store.html
@@ -108,6 +108,7 @@
 
   </div>
 </div>
+        <div class="ProductWrapper">
     <div class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/80APZS6SUS_89384197_front.jpg">
             <div id = "ProductTitel">Kostymbyxa</div>
@@ -203,6 +204,7 @@
             <div id = "ProductTitel">Kostymbyxa</div>
             <div id = "ProductPrice">299:-</div>
         </div>
+    </div>
     </div>
    <footer id="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
