--- a/Template/index.html
+++ b/Template/index.html
@@ -167,27 +167,27 @@
   <h3 class="popular">Populära butiker</h3>
       <div class="slider center col-md-10 col-md-offset-1">       
           <div class="slide">
-            <div class="cl cl-yellow"></div>
+            <div class="cl cl-yellow"><img class="slideimg" src="#"></div>
               <p class="slidedesc"></p>
           </div>
           <div class="slide">
-            <div class="cl cl-blue"></div>
+            <div class="cl cl-blue"><img class="slideimg" src="#"></div>
               <p class="slidedesc"></p>
           </div>
           <div class="slide">
-            <div class="cl cl-red"></div>
+            <div class="cl cl-red"><img class="slideimg" src="#"></div>
               <p class="slidedesc"></p>
           </div>
         <div class="slide">
-            <div class="cl cl-yellow"></div>
+            <div class="cl cl-yellow"><img class="slideimg" src="#"></div>
             <p class="slidedesc"></p>
           </div>
           <div class="slide">
-            <div class="cl cl-blue"></div>
+            <div class="cl cl-blue"><img class="slideimg" src="#"></div>
               <p class="slidedesc"></p>
           </div>
           <div class="slide">
-            <div class="cl cl-red"></div>
+            <div class="cl cl-red"><img class="slideimg" src="#"></div>
               <p class="slidedesc"></p>
           </div>
           
