--- a/Template/main.css
+++ b/Template/main.css
@@ -207,23 +207,37 @@ a.socialIcon:hover, .socialHoverClass {
 }
 
 /*Style för enskilda bilder i bildspelen*/
+.slideimg {
+  max-height: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
 .slidedesc {
     font-weight: bold;
     width: 80%;
     margin-left: 10%;
 }
-.slidepic {
-    height: 100%;
-    width: 100%;
-}
+
 .cl {
   height:175px;
-  padding:10px;
+  width: 230px;
+  display: inline-block;
+  vertical-align: top; /*not required*/
+  position: relative;
 }
 
 .cl-yellow { 
   background: white;
   border: 1px solid lightgray;
+    
 }
 
 .cl-blue { 
