the mother of all footers has been created

--- a/Template/contact.html
+++ b/Template/contact.html
@@ -49,7 +49,7 @@
   </div>
  </nav>
     
-    <div id="margincontact" class="container">
+    <div class="margincontact container">
         <h2 id="contacth2">Kontakta oss</h2>
         
         <div class="row">
