--- a/Template/about.html
+++ b/Template/about.html
@@ -49,7 +49,7 @@
   </div>
  </nav>
     
-    <div id="marginabout" class="container">
+    <div class="margincontact container">
         <h2 id="abouth2">Om Koholo</h2>
             <div class="col-sm-8">
                 <h4>En webbutik åt alla!</h4>
