--- a/Template/how-to.html
+++ b/Template/how-to.html
@@ -49,7 +49,7 @@
   </div>
  </nav>
     
-    <div id="marginhow" class="container">
+    <div class="margincontact container">
         <h2 id="how-to-h2">Så här funkar det...</h2>
             <div class="col-sm-8">
                 <h4>ONLINE SHOPPING - enkelt och bekvämt</h4>
