--- a/Template/index.html
+++ b/Template/index.html
@@ -168,27 +168,27 @@
   <h3 class="popular">Populära butiker</h3>
       <div class="slider center col-md-10 col-md-offset-1">       
           <div class="slide">
-            <div class="cl cl-yellow"><img class="slideimg" src="#"></div>
+            <div class="cl cl-yellow"></div>
               <p class="slidedesc"></p>
           </div>
           <div class="slide">
-            <div class="cl cl-blue"><img class="slideimg" src="#"></div>
+            <div class="cl cl-blue"></div>
               <p class="slidedesc"></p>
           </div>
           <div class="slide">
-            <div class="cl cl-red"><img class="slideimg" src="#"></div>
+            <div class="cl cl-red"></div>
               <p class="slidedesc"></p>
           </div>
         <div class="slide">
-            <div class="cl cl-yellow"><img class="slideimg" src="#"></div>
+            <div class="cl cl-yellow"></div>
             <p class="slidedesc"></p>
           </div>
           <div class="slide">
-            <div class="cl cl-blue"><img class="slideimg" src="#"></div>
+            <div class="cl cl-blue"></div>
               <p class="slidedesc"></p>
           </div>
           <div class="slide">
-            <div class="cl cl-red"><img class="slideimg" src="#"></div>
+            <div class="cl cl-red"></div>
               <p class="slidedesc"></p>
           </div>
           
@@ -222,7 +222,7 @@
   </div>
 </div>
         </div>
-    <footer id="footer">
+    <footer class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
         
         <div class="container">
