--- a/Template/main.css
+++ b/Template/main.css
@@ -5,8 +5,7 @@
 }
 #wrapper {
     height: auto;
-    min-height: 100%;
-    margin-bottom: 5%;
+    position: relative;
   
 }
 /*Style för redirectsida*/
@@ -450,10 +449,6 @@ a.socialIcon:hover, .socialHoverClass {
 }
 
 /* Jacob CSS för contact.html, bas-design ärvs från ovanstående*/
-#margincontact {
-    margin-bottom: 15%;
-}
-
 #contacth2{
     margin-bottom: 30px;
     font-family: 'Lobster', cursive;
@@ -811,22 +806,8 @@ p {
 }
 /*Style för footer*/
 
+
 .footer {
-    position: fixed;
-    margin-top: 5%;
-    width: 100%;
-    background-color: #f5f5f5;
-    box-sizing: border-box;
-    text-align: center;
-    font-weight: bold;
-    height: 12%;
-    font-size: 80%;
-    bottom: 0;
-}
-
-
-
-#footer {
     
     
     width: 100%;
@@ -838,6 +819,7 @@ p {
     font-size: 80%;
     bottom: 0;
     clear:both;
+    position: fixed;
 }
 
 
@@ -941,7 +923,7 @@ min-height:100%;
 }
 
 @media screen and (max-width: 1265px) {
-
+    
     .ProductDiv{
 
         width:33%;
@@ -949,14 +931,17 @@ min-height:100%;
     } 
 }
 
-@media screen and (max-width: 1600px) {
-    .footer {
-        height: 22%;
-    }
-}
+
 
 @media screen and (max-width: 900px) {
     
+    #wrapper {
+        position: static;
+    }
+    
+    .footer {
+        position: static;
+    }
     .ProductDiv{
 
         width:50%;    
@@ -974,17 +959,10 @@ min-height:100%;
     
 }
     
-#wrapper {
-    margin-bottom: 40%;
-    }
-    
 body {
       height: 100%;  
     }
     
-.footer {
-    height: 20%;
-}
     
     .popular {
         margin-top: 15%;
