--- a/Template/singleprod.html
+++ b/Template/singleprod.html
@@ -188,7 +188,7 @@
       
         </div>
 
-    <footer id="footer">
+    <footer class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
         
         <div class="container">
