--- a/Template/products.html
+++ b/Template/products.html
@@ -284,34 +284,55 @@
            
     
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
-            <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/80APZS6SUS_89384197_front.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+            <img src="http://static.byggmax.com/media/!Product!P-6250030!productImage!0_6250030.jpg/medium/_verkantsh_ngt_f_nster_2_glas_Outline_Vit.jpg">
+            <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
+           
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/82APFSMOHW_7310647180960_front.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+            <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
              <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/08APLS9SNS_89383827_front.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+             <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/83APKSWCL2_3114439055429_back.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+             <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
              <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/017922-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+             <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/01APPOI6T7_5415212479394_711-Skinny-Jeans-Fair-Spirit_detail.jpg">
@@ -339,57 +360,93 @@
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/60AP382AOY_7340110928683_side.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-             <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(nelly)Namnlöst-1.png" title="Visa intern butik" height="25" border="0"></div>
+             <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
          <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/018998-0001.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+            <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+             <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(ahlens)Namnlöst-1.png" title="Visa intern butik" height="25" border="0"></div>
+            <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(ahlens)Namnlöst-1.png" title="Visa intern butik" height="25" border="0"></div>
+            <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(nelly)Namnlöst-1.png" title="Visa intern butik" height="25" border="0"></div>
+        <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
             <img src="http://nlyscandinavia.scene7.com/is/image/nlyscandinavia/productLarge/025605-0029.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(ahlens)Namnlöst-1.png" title="Visa intern butik" height="25" border="0"></div>
+            <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
         <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
              <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+             <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
         </div>
        <div data-toggle="modal" data-target="#productModal" class="ProductDiv col-md-2">
              <img src="https://www.ahlens.se/INTERSHOP/static/BOS/Ahlens-AhlensSE-Site/-/Ahlens/sv_SE/ProductListMobileRetina/38APSO19RU_5415212219020_711-Skinny-Daytrip-Back_other.jpg">
-            <div id = "ProductTitel">Kostymbyxa</div>
-            <div id = "ProductPrice">299:-</div>
-           <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+            <div class ="SpecDiv">
+                 <div id = "ProductTitel">Kostymbyxa</div>
+                            <div id = "ProductPrice">299:-</div>
+                            <div id = "Brand"><img src="http://www.koholo.com/admin/users/folders_for_webbshop/(stylepit)Untitled-1.png" title="Visa intern butik" height="25" border="0"></div>
+
+
+            </div>
     </div> 
 
 </div>
