--- a/Template/products.html
+++ b/Template/products.html
@@ -467,7 +467,7 @@
 </div>
 
         
-    <footer id="footer">
+    <footer class="footer">
         <p id="copyright">Presenteras av Koholo Shopping Network © 2016 koholo.com. Alla rättigheter förbehållna</p>
         
         <div class="container">
