--- a/Template/index.html
+++ b/Template/index.html
@@ -56,7 +56,7 @@
     <div class="container">
     <div class="row">
         <h1 id="searchhead">Sök efter produkter här...</h1>
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-lg-8 col-lg-offset-2">
 		    <div class="input-group">
                 <div class="input-group-btn search-panel">
                     <select type="button" id="categorybtn" class="btn btn-default selectpicker" data-toggle="dropdown">
