--- a/Template/email.html
+++ b/Template/email.html
@@ -1,155 +1,126 @@
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<style>
-/***
-User Profile Sidebar by @keenthemes
-A component of Metronic Theme - #1 Selling Bootstrap 3 Admin Theme in Themeforest: http://j.mp/metronictheme
-Licensed under MIT
-***/
-
-body {
-    padding: 0;
-    margin: 0;
-}
-
-html { -webkit-text-size-adjust:none; -ms-text-size-adjust: none;}
-@media only screen and (max-device-width: 680px), only screen and (max-width: 680px) { 
-    *[class="table_width_100"] {
-		width: 96% !important;
-	}
-	*[class="border-right_mob"] {
-		border-right: 1px solid #dddddd;
-	}
-	*[class="mob_100"] {
-		width: 100% !important;
-	}
-	*[class="mob_center"] {
-		text-align: center !important;
-	}
-	*[class="mob_center_bl"] {
-		float: none !important;
-		display: block !important;
-		margin: 0px auto;
-	}	
-	.iage_footer a {
-		text-decoration: none;
-		color: #929ca8;
-	}
-	img.mob_display_none {
-		width: 0px !important;
-		height: 0px !important;
-		display: none !important;
-	}
-	img.mob_width_50 {
-		width: 40% !important;
-		height: auto !important;
-	}
-}
-.table_width_100 {
-	width: 680px;
-}
-</style>
-
-<!--
-Responsive Email Template by @keenthemes
-A component of Metronic Theme - #1 Selling Bootstrap 3 Admin Theme in Themeforest: http://j.mp/metronictheme
-Licensed under MIT
--->
-
-<div id="mailsub" class="notification" align="center">
-
-<table width="100%" border="0" cellspacing="0" cellpadding="0" style="min-width: 320px;"><tr><td align="center" bgcolor="#eff3f8">
-
-
-<!--[if gte mso 10]>
-<table width="680" border="0" cellspacing="0" cellpadding="0">
-<tr><td>
-<![endif]-->
-
-<table border="0" cellspacing="0" cellpadding="0" class="table_width_100" width="100%" style="max-width: 680px; min-width: 300px;">
-    <tr><td>
-	<!-- padding -->
-	</td></tr>
-	<!--header -->
-	<tr><td align="center" bgcolor="#ffffff">
-		<!-- padding -->
-		<table width="90%" border="0" cellspacing="0" cellpadding="0"><div style="height: 30px; line-height: 30px; font-size: 10px;"></div>
-			<tr><td align="center">
-			    		<a href="#" target="_blank" style="color: #596167; font-family: Arial, Helvetica, sans-serif; float:left; width:100%; padding:20px;text-align:center; font-size: 13px;">
-									<font face="Arial, Helvetica, sans-seri; font-size: 13px;" size="3" color="#596167">
-									<img src="logo-koholo.png" width="120" alt="Koholo" border="0"  /></font></a>
-					</td>
-					<td align="right">
-				<!--[endif]--><!-- 
-
-			</td>
-			</tr>
-		</table>
-		<!-- padding --><div style="height: 50px; line-height: 50px; font-size: 10px;"></div>
-	</td></tr>
-	<!--header END-->
-
-	<!--content 1 -->
-	<tr><td align="center" bgcolor="#fbfcfd">
-		<table width="90%" border="0" cellspacing="0" cellpadding="0">
-			<tr><td align="center">
-				<!-- padding --><div style="height: 60px; line-height: 60px; font-size: 10px;"></div>
-				<div style="line-height: 44px;">
-					<font face="Arial, Helvetica, sans-serif" size="5" color="#57697e" style="font-size: 34px;">
-					<span style="font-family: Arial, Helvetica, sans-serif; font-size: 34px; color: #57697e;">
-						Bekräfta din e-post
-					</span></font>
-				</div>
-				<!-- padding --><div style="height: 40px; line-height: 40px; font-size: 10px;"></div>
-			</td></tr>
-			<tr><td align="center">
-				<div style="line-height: 24px;">
-					<font face="Arial, Helvetica, sans-serif" size="4" color="#57697e" style="font-size: 15px;">
-					<span style="font-family: Arial, Helvetica, sans-serif; font-size: 15px; color: #57697e;">
-						Klicka på knappen
-					</span></font>
-				</div>
-				<!-- padding --><div style="height: 40px; line-height: 40px; font-size: 10px;"></div>
-			</td></tr>
-			<tr><td align="center">
-				<div style="line-height: 24px;">
-					<a href="#" target="_blank" class="btn btn-success block-center">
-					    Bekräfta
-					</a>
-				</div>
-				<!-- padding --><div style="height: 60px; line-height: 60px; font-size: 10px;"></div>
-			</td></tr>
-		</table>		
-	</td></tr>
-	<!--content 1 END-->
-
-
-	<!--footer -->
-	<tr><td class="iage_footer" align="center" bgcolor="#ffffff">
-
-		
-		<table width="100%" border="0" cellspacing="0" cellpadding="0">
-			<tr><td align="center" style="padding:20px;flaot:left;width:100%; text-align:center;">
-				<font face="Arial, Helvetica, sans-serif" size="3" color="#96a5b5" style="font-size: 13px;">
-				<span style="font-family: Arial, Helvetica, sans-serif; font-size: 13px; color: #96a5b5;">
-					Koholo.com 2017 Alla rättigheter förbehållna
-				</span></font>				
-			</td></tr>			
-		</table>
-		
-
-	</td></tr>
-	<!--footer END-->
-	<tr><td>
-
-	</td></tr>
-</table>
-<!--[if gte mso 10]>
-</td></tr>
-</table>
-<![endif]-->
- 
-</td></tr>
-</table>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Simple Transactional Email</title>
+    <style type="text/css">
+    
+    @media only screen and (max-width: 620px) {
+      table[class=body] h1 {
+        font-size: 28px !important;
+        margin-bottom: 10px !important; }
+      table[class=body] p,
+      table[class=body] ul,
+      table[class=body] ol,
+      table[class=body] td,
+      table[class=body] span,
+      table[class=body] a {
+        font-size: 16px !important; }
+      table[class=body] .wrapper,
+      table[class=body] .article {
+        padding: 10px !important; }
+      table[class=body] .content {
+        padding: 0 !important; }
+      table[class=body] .container {
+        padding: 0 !important;
+        width: 100% !important; }
+      table[class=body] .main {
+        border-left-width: 0 !important;
+        border-radius: 0 !important;
+        border-right-width: 0 !important; }
+      table[class=body] .btn table {
+        width: 100% !important; }
+      table[class=body] .btn a {
+        width: 100% !important; }
+      table[class=body] .img-responsive {
+        height: auto !important;
+        max-width: 100% !important;
+        width: auto !important; }}
+    /* -------------------------------------
+        PRESERVE THESE STYLES IN THE HEAD
+    ------------------------------------- */
+    @media all {
+      .ExternalClass {
+        width: 100%; }
+      .ExternalClass,
+      .ExternalClass p,
+      .ExternalClass span,
+      .ExternalClass font,
+      .ExternalClass td,
+      .ExternalClass div {
+        line-height: 100%; }
+      .apple-link a {
+        color: inherit !important;
+        font-family: inherit !important;
+        font-size: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+        text-decoration: none !important; }
+      .btn-primary table td:hover {
+        background-color: green !important; }
+      .btn-primary a:hover {
+        background-color: green!important;
+        border-color: green!important; } }
+    </style>
+  </head>
+  <body class="" style="background-color:#f6f6f6;font-family:sans-serif;-webkit-font-smoothing:antialiased;font-size:14px;line-height:1.4;margin:0;padding:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+    <table border="0" cellpadding="0" cellspacing="0" class="body" style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;background-color:#f6f6f6;width:100%;">
+      <tr>
+        <td style="font-family:sans-serif;font-size:14px;vertical-align:top;">&nbsp;</td>
+        <td class="container" style="font-family:sans-serif;font-size:14px;vertical-align:top;display:block;max-width:580px;padding:10px;width:580px;Margin:0 auto !important;">
+          <div class="content" style="box-sizing:border-box;display:block;Margin:0 auto;max-width:580px;padding:10px;">
+            <!-- START CENTERED WHITE CONTAINER -->
+            <span class="preheader" style="color:transparent;display:none;height:0;max-height:0;max-width:0;opacity:0;overflow:hidden;mso-hide:all;visibility:hidden;width:0;">This is preheader text. Some clients will show this text as a preview.</span>
+            <table class="main" style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;background:#fff;border-radius:3px;width:100%;">
+              <!-- START MAIN CONTENT AREA -->
+              <tr>
+                <td class="wrapper" style="font-family:sans-serif;font-size:14px;vertical-align:top;box-sizing:border-box;padding:20px;">
+                  <table border="0" cellpadding="0" cellspacing="0" style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;width:100%;">
+                    <tr>
+                      <td style="font-family:sans-serif;font-size:14px;vertical-align:top;">
+                        <p style="font-family:sans-serif;font-size:14px;font-weight:bold;margin:0;Margin-bottom:15px;">Bekräftelse av e-post adress</p>
+                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">För att bekräfta din e-post klicka på knappen nedan</p>
+                        <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;box-sizing:border-box;width:100%;">
+                          <tbody>
+                            <tr>
+                              <td align="left" style="font-family:sans-serif;font-size:14px;vertical-align:top;padding-bottom:15px;">
+                                <table border="0" cellpadding="0" cellspacing="0" style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;width:100%;width:auto;">
+                                  <tbody>
+                                    <tr>
+                                      <td style="font-family:sans-serif;font-size:14px;vertical-align:top;background-color:#ffffff;border-radius:5px;text-align:center;background-color:limegreen;"> <a href="http://htmlemail.io" target="_blank" style="text-decoration:underline;background-color:#ffffff;border:solid 1px limegreen;border-radius:5px;box-sizing:border-box;color:limegreen;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin:0;padding:12px 25px;text-decoration:none;text-transform:capitalize;background-color:limegreen;border-color:limegreen;color:#ffffff;">Bekräfta</a> </td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;">Om du inte har begärt det här e-post meddelandet var god kontakta oss per,</p>
+                        <p style="font-family:sans-serif;font-size:14px;font-weight:normal;margin:0;Margin-bottom:15px;"><a href="mailto:info@koholo.com?Subject=Bekräftelse" target="_top">info@koholo.com</a></p>
+                      </td>
+                    </tr>
+                  </table>
+                </td>
+              </tr>
+              
+            </table>
+            
+            <div class="footer" style="clear:both;padding-top:10px;text-align:center;width:100%;">
+              <table border="0" cellpadding="0" cellspacing="0" style="border-collapse:separate;mso-table-lspace:0pt;mso-table-rspace:0pt;width:100%;">
+                <tr>
+                  <td class="content-block" style="font-family:sans-serif;font-size:14px;vertical-align:top;color:#999999;font-size:12px;text-align:center;">
+                    <span class="apple-link" style="color:#999999;font-size:12px;text-align:center;">Koholo Shopping Network © 2017 koholo.com. Alla rättigheter förbehållna</span>
+                    
+                  </td>
+                </tr>
+              </table>
+            </div>
+            
+          </div>
+        </td>
+        <td style="font-family:sans-serif;font-size:14px;vertical-align:top;">&nbsp;</td>
+      </tr>
+    </table>
+  </body>
+</html>
