--- a/Template/store.html
+++ b/Template/store.html
@@ -49,7 +49,7 @@
     </div>
   </div>
  </nav>
-    <div class="logga">
+    <div id="logga2">
         <img id="storelogo" src="logga_muboag.gif">
     </div>
 
