--- a/Template/main.css
+++ b/Template/main.css
@@ -64,8 +64,16 @@
 }
 /*Style för header på butikssida*/
 #storelogo {
-    height: 74px;
-    width: 95px;
+  max-height: 100%;
+  max-width: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
 
 .storedescription {
@@ -275,6 +283,13 @@ a.socialIcon:hover, .socialHoverClass {
 }
 
 /*Style för logotyp och dess div*/
+#logga2 {
+    height: 90px;
+    display: block;
+    vertical-align: top; /*not required*/
+    position: relative;
+}
+
 .logga {
     text-align: center;
     margin-top: 1%;
